fix: search element is covering the banner with the default VLT header - refs #36

--- a/src/less/stagingBanner.less
+++ b/src/less/stagingBanner.less
@@ -40,3 +40,9 @@
     }
   }
 }
+
+body.has-banner {
+  .header-wrapper .header .search-wrapper .search .search-bar:not(.active) {
+    transform: translateY(calc(-1 * var(--staging-banner-offset, 0px)));
+  }
+}
